# theproject

./: README.md  docker-compose.yml  extensions.txt  package-lock.json  package.json
apps/staging-api/: .dockerignore  Dockerfile  Makefile  package.json  pyproject.toml  requirements.txt  run.py  setup_venv.sh  state_machine.puml  wait-for-it.sh
apps/staging-api/scripts/: seed_nodes.py
apps/staging-api/staging/: __init__.py  azure_auth.py  config.py  containers.py  database.py  exceptions.py  logging_config.py  models.py  rules.py  settings.py  state_machine.py
apps/staging-api/staging/acquisition/: importer.py
apps/staging-api/staging/commands/: staging_commands.py
apps/staging-api/staging/handlers/: projection_command_handler.py  staging_command_handler.py  staging_query_handler.py
apps/staging-api/staging/middleware/: logging.py
apps/staging-api/staging/models/: __init__.py  core_model.py
apps/staging-api/staging/queries/: staging_queries.py
apps/staging-api/staging/repositories/: staging_repository.py
apps/staging-api/staging/seeds/: nodes_seed.py
apps/staging-api/staging/services/: projection_service.py  staging_workflow_service.py
apps/staging-api/staging/state/: staging_state_machine.py  staging_states.py
apps/staging-api/staging/utilz/: changeset_id.py  csv_reader.py
apps/staging-api/tests/: conftest.py
apps/staging-api/tests/features/: import_staging.feature  tc001_approve_new_record.feature  tc002_reactivate_existing_record.feature  tc003_reactivate_on_rejection.feature  tc004_reject_new_record.feature  tc008_reject_deletion.feature  (+7 more)
(+13 files in other folders)
